// Vitest Snapshot v1

exports[`Xiangqi > moves > ma 1`] = `
[
  {
    "XY": (9, 8),
    "type": 8,
  },
  {
    "XY": (7, 8),
    "type": 8,
  },
]
`;

exports[`Xiangqi > moves > pao 1`] = `
[
  {
    "XY": (8, 7),
    "type": 4,
  },
  {
    "XY": (8, 6),
    "type": 4,
  },
  {
    "XY": (8, 5),
    "type": 4,
  },
  {
    "XY": (8, 4),
    "type": 4,
  },
  {
    "XY": (8, 1),
    "type": 7,
  },
  {
    "XY": (9, 8),
    "type": 4,
  },
  {
    "XY": (7, 8),
    "type": 4,
  },
  {
    "XY": (6, 8),
    "type": 4,
  },
  {
    "XY": (5, 8),
    "type": 4,
  },
  {
    "XY": (4, 8),
    "type": 4,
  },
  {
    "XY": (3, 8),
    "type": 4,
  },
  {
    "XY": (8, 9),
    "type": 4,
  },
]
`;

exports[`Xiangqi > moves > xiang 1`] = `
[
  {
    "XY": (9, 8),
    "type": 8,
  },
  {
    "XY": (5, 8),
    "type": 8,
  },
]
`;
